Removing mentions to CS and logos from html elements. Not touch functionality, so work still has to be done here.

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,9 +10,9 @@
 
   <div class="banner">
     <a href="{{ url_for('dashboard') }}">
-      <img src="{{ url_for('static', filename='images/ODU_LOGO.jpg') }}" class="banner-logo" />
+      <img src="{{ url_for('static', filename='images/LOGO.png') }}" class="banner-logo" />
       <span class="banner-text">
-        ODUCS Account Management
+        Account Management
       </span>
     </a>
 
@@ -49,8 +49,8 @@
 
 
   <div class="footer"><hr />
-    <p class="footer-text">Have a question or need assistance? Email us at root@cs.odu.edu.</p>
-    <p class="footer-link"><a href="https://www.cs.odu.edu">CS Home Page</a></p>
+    <p class="footer-text">Have a question or need assistance? Email us at //TODO.</p>
+    <p class="footer-link"><a href="https://todo.com">Home Page</a></p>
   </div>
 
   </body>
