--- a/app/templates/details-table.html
+++ b/app/templates/details-table.html
@@ -13,16 +13,12 @@
           <td>{{ attributes.sn.value }} </td>
         </tr>
         <tr>
-          <td><strong>CS Username:</strong> </td>
+          <td><strong>Username:</strong> </td>
           <td>{{ attributes.sAMAccountName.value }} </td>
         </tr>
         <tr>
-          <td><strong>MIDAS Email:</strong> </td>
+          <td><strong>Email Address:</strong> </td>
           <td>{{ attributes.extensionAttribute1.value }} </td>
-        </tr>
-        <tr>
-          <td><strong>UIN:</strong> </td>
-          <td>{{ attributes.employeeNumber.value }} </td>
         </tr>
         <tr>
             <td><strong>Group Membership:</strong> </td>
