--- a/app/templates/footer.html
+++ b/app/templates/footer.html
@@ -1,6 +1,6 @@
 <div class="footer"><hr />
-  <p class="footer-text">Have a question or need assistance? Email us at root@cs.odu.edu.</p>
-  <p class="footer-link"><a href="https://www.cs.odu.edu">CS Home Page</a></p>
+  <p class="footer-text">Have a question or need assistance? Email us at //TODO.</p>
+  <p class="footer-link"><a href="https://todo.com">Home Page</a></p>>
 </div>
 </body>
 </html>
