--- a/app/templates/request.html
+++ b/app/templates/request.html
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="contents" id="main-contents">
     <div class="login-box-shadow" id="main-login-box-shadow">
-      <div class="login-box"><h2>Create CS Account</h2>
+      <div class="login-box"><h2>Create Account</h2>
 
         {% with messages = get_flashed_messages(with_categories=true) %}
         <!-- Categories: success (green), info (blue), warning (yellow), danger (red) -->
