--- a/app/templates/tos.html
+++ b/app/templates/tos.html
@@ -3,66 +3,9 @@
 {% block content %}
 <div class="contents" id="main-contents">
     <iframe class="tos-frame" srcdoc="
-    <h2><strong>Service Agreement:</strong></h2>
-    <p>Services provided by the Old Dominion University Computer Science (ODUCS) department are provided &quot;AS IS&quot; 
-    without warranty of any kind, including but not limited to: warranty to be error free; available without interruption or 
-    degradation; secure; or suitable for any particular purpose. Old Dominion University shall not be held liable for any 
-    damages (including loss, damage or exposure of data or access) occurring as a result of any connection to ODUCS 
-    computers.</p>
-    <p>
-    Users of department machines are expressly prohibited from the following:
-    </p><ul>
-    <li>Allowing unauthorized persons to access ODUCS computers.</li>
-    <li>Connecting a private network or any other network to ODUCS computers.</li>
-    <li>Forging another\'s identity, including the sending of forged e-mail or other messages.</li>
-    <li>Running open proxies, open mail relays, or other services which allow anonymous connectivity.</li>
-    <li>Sending network data with forged or incorrect source addresses.</li>
-    <li>Copying of University owned or licensed information.</li>
-    <li>Disrupting or attempting to disrupt any kind of network service.</li>
-    <li>Performing any type of scanning or probing of other systems or services.</li>
-    <li>Unlawfully distributing or duplicating copyrighted information, including audio, video, software and other data as 
-    expressly prohibited by University Policy.</li>
-    </ul>
-    <p>Users are responsible for <b>all</b> activity originating from their account, regardless of whether or not they generated it, are 
-    aware of the nature of the activity, or are aware of having violated any policy or law.</p>
-    <p>ODUCS polices are supplemental to University, local, state, and federal policies and regulations. Users of ODUCS 
-    machines are encouraged to regularly review all applicable University policies, as well as local, state, and federal 
-    policies and regulations. Changes to these and other policies may be made at any time without notice. Any violation 
-    may result in University disciplinary action (including but not limited to termination of access, suspension or 
-    expulsion), and/or local, state, or federal prosecution.</p>
-    <p>ODUCS staff and the Office of Computing and Communication Services reserve the authority to terminate any 
-    computer connection, account, access or other service, at any time without notice for suspected violations or to protect 
-    the University or related resources.</p>
-    
-    <h3><b>Non-Disclosure Agreement</b></h3>
-    <p>In compliance with the Office of Research, One-Way Non-Disclosure    
-    Agreement to Protect University's Intellectual Property:<br>
-    Confidential Information is defined as &quot;University-owned samples, 
-    materials, data, information (oral or written), drawings, sketches, and
-    other information of a secret confidential, or proprietary nature
-    concerning any work within the Computer Science Department which.&quot;<br><br>   
-    Each individual agrees that Confidential Information acquired 
-    within the Department &quot;shall be maintained in trust and confidence and
-    shall not, directly or through others, be disclosed, copyrighted, or
-    published.&quot; The Disclosure of any Confidential Information is to be left
-    to the discretion of the data owner. Faculty and students have absolute
-    rights over their work and are required to mark such data as
-    confidential in order to prevent any misuse and infringement. Unless
-    explicitly granted privileges by the owner, Computer Science
-    Department members are not to disclose any information they acquire. 
-    </p>
-    
-    <h3><b>Acceptable Usage Statement:</b></h3>
-    <p>Users are granted access to computing, networks, and information stored electronically contingent upon their prudent 
-    and responsible use. Access is granted to the individual and no individual can transfer or share access with another. 
-    You may not (1) use information or resources for any illegal or unauthorized purpose or act, including violate any state 
-    or federal laws or any established policies or procedures of the University or the ODUCS department; (2) participate in 
-    any behavior that unreasonably interferes with the fair use of other users or harms them in any way; (3) use resources 
-    or information for a commercial purpose; (4) use ODUCS departmental printers to print material not related to Computer 
-    Science courses or print more than 100 pages per month. Misuse of computing, networking, and information resources may result in 
-    severe consequences; include the termination of access to these resources.</p>
-    <p>By signing up for an account, I acknowledge understanding of the information presented here-in and offer consent to 
-    possible monitoring, auditing, or investigation, including the inspection of data stored on department computer systems.</p>
+    <h2><strong>This is a heading for the Terms of Service Document.</strong></h2>
+    <p>This is an example body of the terms of service document.</p>
+
     "></iframe>
     <br> 
 
