--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -49,8 +49,8 @@
 
 
   <div class="footer"><hr />
-    <p class="footer-text">Have a question or need assistance? Email us at //TODO.</p>
-    <p class="footer-link"><a href="https://todo.com">Home Page</a></p>
+    <p class="footer-text">Have a question or need assistance? Email us at {{ "support@example.com" | get_env('SUPPORT_EMAIL') }}</p>
+    <p class="footer-link"><a href="{{ "support@example.com" | get_env('COMPANY_HOMEPAGE') }}">Home Page</a></p>
   </div>
 
   </body>
